--- a/css/premade/molds/_m-icon.scss
+++ b/css/premade/molds/_m-icon.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   width: 1em;
   height: 1em;
+  min-width: 1em;
 
   stroke: currentColor;
   stroke-width: 2;
