--- a/css/premade/molds/m-button/_button-sizing.scss
+++ b/css/premade/molds/m-button/_button-sizing.scss
@@ -32,24 +32,21 @@ $-button-size-names: tiny, small, medium, large, huge !default;
 @mixin button-sizing($size: 3) {
   $index: index($-button-size-names, $size) or $size;
 
-  $height: nth($-button-heights, $index);
   $font_size: nth($-button-font_sizes, $index);
-
   $icon-size: font-size($font_size);
   $text-size: font-size($font_size - 1);
 
+  $height: nth($-button-heights, $index);
   $padding: ($height - $icon-size) / 2 - rem(1px);
-  height: $height;
-  padding: 0 $padding;
-  font-size: $text-size;
 
-  > .m-icon {
-    min-width: $icon-size;
-    height: $icon-size;
-    vertical-align: text-top;
-  }
+  height: $height;
+  padding: $padding;
+
+  line-height: $icon-size;
+  font-size: $icon-size;
+
   > span {
-    // line-height: $icon-size;
-    padding: 0 ($icon-size - $text-size) / 2;
+    font-size: $text-size;
+    padding: ($icon-size - $text-size) / 2;
   }
 }
